--- a/pom.xml
+++ b/pom.xml
@@ -198,42 +198,33 @@
           </executions>
         </plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.5</version>
-                <configuration>
-                    <complianceLevel>${project.build.source}</complianceLevel>
-                    <showWeaveInfo>true</showWeaveInfo>
-                    <verbose>true</verbose>
-                    <sources>
-                        <source>
-                            <basedir>src/main/java</basedir>
-                            <includes>
-                                <!--<include>**/*WorkflowImpl.java</include>-->
-                                <include>**/*ActivitiesImpl.java</include>
-                                <include>**/*WorkflowImpl.java</include>
-                            </includes>
-                        </source>
-                        <source>
-                            <basedir>target</basedir>
-                            <includes>
-                                <include>**/*.java</include>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>aspectj-maven-plugin</artifactId>
+              <version>1.5</version>
+              <configuration>
+                  <complianceLevel>1.6</complianceLevel>
+                  <showWeaveInfo>true</showWeaveInfo>
+                  <verbose>true</verbose>
+                  <sources>
+                      <source>
+                          <basedir>src/main/java</basedir>
+                          <includes>
+                              <include>**/*.java</include>
+                          </includes>
+                      </source>
 
-                            </includes>
-                        </source>
-
-                    </sources>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+                  </sources>
+              </configuration>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>compile</goal>
+                          <goal>test-compile</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
       </plugins>
     </build>
 
