--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,9 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
           <executions>
             <execution>
               <id>sign-artifacts</id>
